# learning-vulkan-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  flake.nix
cmake/: slang.cmake
shaders/: slang.spv  triangle.slang
src/: App.cpp  App.hpp  VkResult.hpp  main.cpp  vulkan_crab_compatability.hpp
